- Fix to Google Analytics - jQuery Mobile is no longer used as it was causing crashes on iOS tablets   - Specifically select elements were the problem - Modified notification message text for bad air quality events after 2 hours - TTL on notifications is now 1 hour

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -302,13 +302,21 @@
 }
 
 .custom-dialog .ui-dialog-titlebar-close {
-  background-image: none !important;
-  background-color: transparent !important;
-  border-radius: 0px !important;
-  border: 0px !important;
-  opacity: 0.8 !important;
-  margin-right: 12px !important;
-  margin-top: -9px !important;
+  font-size: 22px;
+  top: 11px;
+}
+
+.ui-dialog-titlebar-close.ui-state-default{
+  background: none;
+  border: none;
+  height: auto;
+}
+.ui-dialog-titlebar-close .ui-button-text {
+  padding: 0;
+  text-indent: 0;
+}
+.ui-dialog-titlebar-close .ui-icon-closethick{
+  background: none;
 }
 
 .custom-dialog .ui-dialog-buttonpane {
